Fix for image size on mobile

--- a/wwwroot/style.css
+++ b/wwwroot/style.css
@@ -227,8 +227,10 @@ img.portrait {
             flex-wrap: wrap-reverse;
         }
         figure {
-            width: auto;
-            height: auto;
+            min-width: 0;
+            min-height: 0;
+            width: 100%;
+            height: 100%;
         }
     }
     @media (max-width: 700px) {
